<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lay"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivitySeekBar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekbar1"
            android:layout_width="match_parent"
            android:layout_height="86dp"
            android:layout_gravity="center"
            android:background="@color/red"
            android:max="255" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekbar2"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:background="@color/green"
            android:max="255" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <SeekBar
            android:id="@+id/seekbar3"
            android:layout_width="match_parent"
            android:layout_height="104dp"
            android:layout_gravity="center"
            android:background="@color/blue"
            android:max="255" />
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="23dp"
            android:layout_marginTop="120dp"
            android:text="@string/_0_one"
            android:textColor="@color/redtext"
            android:textSize="25sp" />

        <TextView

            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="120dp"
            android:text="@string/_0_two"
            android:textColor="@color/greentext"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/text3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="23dp"
            android:layout_marginTop="120dp"
            android:text="@string/_0_third"
            android:textColor="@color/blutext"
            android:textSize="25sp"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

</LinearLayout>

